iterate failure method
Former-commit-id: 248a8bd9a6ad1fd9f05c820fd4f877f339ae67e2

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -288,13 +288,13 @@ jobs:
         poetry run pymedphys dev tests -v -s --run-only-yarn
 
     - name: Delete GUI demo data and run the PyMedPhys GUI
-      if: matrix.task == 'cypress' && ${{ failure() }}
+      if: ${{ failure() }} && matrix.task == 'cypress'
       run: |
         rm -rf pymedphys-gui-demo
         poetry run pymedphys gui &
 
     - name: Run Cypress through the dashboard tool so as to see the failures
-      if: matrix.task == 'cypress' && ${{ failure() }}
+      if: ${{ failure() }} && matrix.task == 'cypress'
       uses: cypress-io/github-action@v1
       with:
         install: false
