rename TestingMatrix --> Tests

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -48,7 +48,7 @@ jobs:
 
 # =============================================================================
 
-  TestingMatrix:
+  Tests:
     strategy:
       fail-fast: false
       matrix:
