add stackoverflow test
Former-commit-id: e139f9836f7b6bc24a3ac995b1046e9ebe2101e0

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -285,6 +285,13 @@ jobs:
       run: |
         poetry run pymedphys dev docs
 
+## Stackoverflow
+
+    - name: Run stackoverflow example(s)
+      if: matrix.task == 'stackoverflow'
+      run: |
+        poetry run python ./examples/stackoverflow/gamma.py
+
 ## Cypress
 
     - name: Initially run Cypress tests only locally, without dashboard integration
