--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -116,11 +116,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: actions/cache@v2
-      with:
-        path: ~/.pymedphys
-        key: pymedphys-data-${{ hashFiles('**/hashes.json') }}
-
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -137,7 +132,7 @@ jobs:
       run: |
         python -m pip install -U pip # to ensure version > 20 to have cache dir
         echo "::set-output name=dir::$(pip cache dir)"
-    - name: pip cache
+    - name: Pip Cache
       uses: actions/cache@v2
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
@@ -151,7 +146,7 @@ jobs:
       run: |
         poetry config virtualenvs.in-project true
 
-    - name: Set up cache
+    - name: Poetry Cache
       uses: actions/cache@v2
       id: cache
       with:
@@ -238,6 +233,21 @@ jobs:
       run: |
         poetry update
         poetry install --no-dev -E tests
+
+
+# Download data for consistent cache
+
+    - name: PyMedPhys Cache
+      if: matrix.task != 'clean'
+      uses: actions/cache@v2
+      with:
+        path: ~/.pymedphys
+        key: pymedphys-${{ hashFiles('**/hashes.json') }}
+
+    - name: Download all PyMedPhys data for a consistent cache
+      if: matrix.task != 'clean'
+      run: |
+        poetry run python -c "from pymedphys._data import download; download.download_all()"
 
 
 # TESTS
