--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -235,7 +235,7 @@ jobs:
         poetry install --no-dev -E tests
 
 
-# Download data for consistent cache
+# Download all data for consistent cache
 
     - name: PyMedPhys Cache
       if: matrix.task != 'clean'
