--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -53,43 +53,17 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos', 'windows']
-        task:
-          [
-            'pylint', 'docs', 'doctest', 'clean',
-            'pytest', 'slow', 'stackoverflow', 'updates',
-            'cypress'
-          ]
+        task: ['tests', 'docs', 'stackoverflow', 'updates']
         exclude:
           - os: 'windows'
-            task: 'pylint'
-          - os: 'windows'
-            task: 'doctest'
-          - os: 'windows'
-            task: 'slow'
-          - os: 'windows'
             task: 'stackoverflow'
           - os: 'windows'
             task: 'updates'
-          - os: 'windows'
-            task: 'cypress'
-          - os: 'macos'
-            task: 'pylint'
-          - os: 'macos'
-            task: 'doctest'
-          - os: 'macos'
-            task: 'slow'
+
           - os: 'macos'
             task: 'stackoverflow'
           - os: 'macos'
             task: 'updates'
-          - os: 'macos'
-            task: 'cypress'
-          - os: 'macos'
-            task: 'docs'
-          - os: 'macos'
-            task: 'clean'
-          - os: 'windows'
-            task: 'clean'
 
         include:
           - os: 'ubuntu'
@@ -98,24 +72,6 @@ jobs:
             python-version: 3.7
           - os: 'macos'
             python-version: 3.7
-          - task: 'docs'
-            install-type: 'docs'
-          - task: 'pylint'
-            install-type: 'tests'
-          - task: 'pytest'
-            install-type: 'tests'
-          - task: 'slow'
-            install-type: 'tests'
-          - task: 'doctest'
-            install-type: 'tests'
-          - task: 'cypress'
-            install-type: 'tests'
-          - task: 'stackoverflow'
-            install-type: 'plain'
-          - task: 'clean'
-            install-type: 'no-deps'
-          - task: 'updates'
-            install-type: 'tests-with-updates'
 
     runs-on: ${{ matrix.os }}-latest
 
@@ -142,7 +98,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
-        key: pip-${{ matrix.install-type }}-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}
+        key: pip-${{ matrix.task }}-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}
 
     - name: Install poetry
       run: |
@@ -157,7 +113,7 @@ jobs:
       id: cache
       with:
         path: .venv
-        key: venv-${{ matrix.install-type }}-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
+        key: venv-${{ matrix.task }}-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
 
     - name: Ensure cache is healthy
       if: steps.cache.outputs.cache-hit == 'true'
@@ -165,77 +121,78 @@ jobs:
       run: |
         poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
 
-
-# INSTALLATIONS
-
-## System installs
-
-    - uses: actions/setup-node@v1
-      if: matrix.task == 'yarn'
-
-    - name: Install FreeTDS on MacOS
-      if: matrix.os == 'macos' && matrix.task != 'clean' && matrix.task != 'stackoverflow'
-      run: |
-        brew install freetds
-
-    - name: Install Pandoc on Ubuntu
-      if: matrix.install-type == 'docs' && matrix.os == 'ubuntu'
-      run: |
-        sudo apt-get install -y pandoc
-
-    - name: Install Pandoc on MacOS
-      if: matrix.install-type == 'docs' && matrix.os == 'macos'
-      run: |
-        brew install pandoc
-
-    - name: Install Pandoc on Windows
-      if: matrix.install-type == 'docs' && matrix.os == 'windows'
-      run: |
-        choco install pandoc
-
-## No dependencies
+# No dependencies
 
     - name: Build wheel and install core dependencies
-      if: matrix.install-type == 'no-deps'
+      if: matrix.task == 'tests'
       run: |
         poetry build --format wheel
         pip install -r requirements-core.txt
 
     - name: Install wheel
-      if: matrix.install-type == 'no-deps' && matrix.os == 'windows'
+      if: matrix.task == 'tests' && matrix.os == 'windows'
       run: |
         python -m pip install (Get-Item .\dist\*.whl) --no-dependencies
 
     - name: Install wheel
-      if: matrix.install-type == 'no-deps' && matrix.os != 'windows'
+      if: matrix.task == 'tests' && matrix.os != 'windows'
       run: |
         python -m pip install ./dist/*.whl --no-dependencies
+
+    - name: Run clean tests
+      if: matrix.task == 'tests'
+      run: |
+        pymedphys --help
+        python -c "import pymedphys"
+
+# System installs
+
+    - name: Install FreeTDS on MacOS
+      if: matrix.os == 'macos'
+      run: |
+        brew install freetds
+
+    - name: Install Pandoc on Ubuntu
+      if: matrix.task == 'docs' && matrix.os == 'ubuntu'
+      run: |
+        sudo apt-get install -y pandoc
+
+    - name: Install Pandoc on MacOS
+      if: matrix.task == 'docs' && matrix.os == 'macos'
+      run: |
+        brew install pandoc
+
+    - name: Install Pandoc on Windows
+      if: matrix.task == 'docs' && matrix.os == 'windows'
+      run: |
+        choco install pandoc
 
 ## Plain install
 
     - name: Run a plain installation
-      if: matrix.install-type == 'plain'
+      if: matrix.task == 'stackoverflow'
       run: |
         poetry install --no-dev
+
 
 ## Install with Documentation Environment
 
     - name: Run a docs installation
-      if: matrix.install-type == 'docs'
+      if: matrix.task == 'docs'
       run: |
         poetry install --no-dev -E docs
 
 ## Install with Tests Environment
 
     - name: Run a tests installation
-      if: matrix.install-type == 'tests'
+      if: matrix.task == 'tests'
       run: |
         poetry install --no-dev -E tests
 
 ## Update all packages and then install with tests environment and
 
     - name: Update all packages then install with tests environment
-      if: matrix.install-type == 'tests-with-updates'
+      if: matrix.task == 'updates'
       run: |
         poetry update
         poetry install --no-dev -E tests
@@ -264,41 +221,33 @@ jobs:
 
 # TESTS
 
-## Clean
+## Pytest
 
-    - name: Run clean tests
-      if: matrix.task == 'clean'
+    - name: Run basic pytest tests
+      if: matrix.task == 'tests' || matrix.task == 'updates'
       run: |
-        pymedphys --help
-        python -c "import pymedphys"
+        poetry run pymedphys dev tests -v
 
 ## Doctest
 
     - name: Run doctest tests
-      if: matrix.task == 'doctest'
+      if: matrix.os == 'ubuntu' && matrix.task == 'tests'
       run: |
         poetry run pymedphys dev tests -v --doctest-modules
 
 ## Pylint
 
     - name: Run pylint tests
-      if: matrix.task == 'pylint' || matrix.task == 'updates'
+      if: matrix.os == 'ubuntu' && ( matrix.task == 'tests' || matrix.task == 'updates' )
       run: |
         poetry run pymedphys dev tests --pylint --pylint-jobs=1
 
 ## Slow
 
     - name: Run slow tests
-      if: matrix.task == 'slow'
+      if: matrix.os == 'ubuntu' && matrix.task == 'tests'
       run: |
         poetry run pymedphys dev tests -v --run-only-slow
-
-## Pytest
-
-    - name: Run basic pytest tests
-      if: matrix.task == 'pytest' || matrix.task == 'updates'
-      run: |
-        poetry run pymedphys dev tests -v
 
 ## Docs
 
@@ -316,19 +265,22 @@ jobs:
 
 ## Cypress
 
+    - uses: actions/setup-node@v1
+      if: matrix.os == 'ubuntu' && matrix.task == 'tests'
+
     - name: Initially run Cypress tests only locally, without dashboard integration
-      if: matrix.task == 'cypress'
+      if: matrix.os == 'ubuntu' && matrix.task == 'tests'
       run: |
         poetry run pymedphys dev tests -v -s --run-only-yarn
 
     - name: Delete GUI demo data and run the PyMedPhys GUI
-      if: failure() && matrix.task == 'cypress'
+      if: failure() && matrix.os == 'ubuntu' && matrix.task == 'tests'
       run: |
         rm -rf pymedphys-gui-demo
         poetry run pymedphys gui &
 
     - name: Run Cypress through the dashboard tool so as to see the failures
-      if: failure() && matrix.task == 'cypress'
+      if: failure() && matrix.os == 'ubuntu' && matrix.task == 'tests'
       uses: cypress-io/github-action@v1
       with:
         install: false
