netlify syntax error
Former-commit-id: 7b62159275c34e78651fda95383c133b79d001f1

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
 pip install poetry &&
 poetry config virtualenvs.in-project true &&
 poetry install -vvv --no-dev -E docs &&
-poetry run pymedphys dev docs &&
+poetry run pymedphys dev docs
 """
 
   publish = "docs/_build/html"
