--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,6 +56,7 @@
     "Riverina",
     "Selectbox",
     "Sobolewski",
+    "UTHSCSA",
     "Xprt",
     "absl",
     "addinivalue",
@@ -226,6 +227,7 @@
     "pyargs",
     "pydeck",
     "pydicom",
+    "pylibjpeg",
     "pylinac",
     "pylint",
     "pymedphys",
@@ -236,6 +238,7 @@
     "pypoetry",
     "pytest",
     "qcls",
+    "quickcheck",
     "rccc",
     "reextract",
     "ref",
