--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -107,6 +107,7 @@ jobs:
 
     - name: Install poetry
       run: |
+        pip install --upgrade pip
         pip install poetry
 
 # No import and run CLI with no dependencies
