--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ dbfread = "*"
 
 pydicom = "*"
 pynetdicom = "*"
-pylibjpeg-libjpeg = "*"
+pylibjpeg-libjpeg = "1.0.0"
 
 # difficult
 cython = "*"
