remove pylibjpeg pin
Former-commit-id: 887040185ba55e4a654932eadb73a0d351ed8651

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ dbfread = "*"
 
 pydicom = "*"
 pynetdicom = "*"
-pylibjpeg-libjpeg = "1.0.0"
+pylibjpeg-libjpeg = "*"
 
 # difficult
 cython = "*"
