working on the beginnings of a caching pipeline
Former-commit-id: dedf5790199b63250279801c1c3117ad8a35608d

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ scikit-image = "*"
 tf-nightly = { version = ">=2.2.0.dev20200306", optional = true, allow-prereleases = true }
 tf-estimator-nightly = { version = "*", optional = true, allow-prereleases = true }
 tb-nightly = { version = "*", optional = true, allow-prereleases = true }
+tensorflow-io-nightly = { version = "*", optional = true, allow-prereleases = true }
 
 # gui
 streamlit = "*"
