run precommit, allow files to work as a package
Former-commit-id: a61633ee7c73ddd1914155439e0dc005c93b5711

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,7 +136,7 @@ known_third_party = [
     "attr", "tqdm", "pytest", "hypothesis", "cefpython3", "notebook",
     "jupyterlab", "traitlets", "jupyterlab_server", "packaging", "dateutil",
     "pymedphys._imports", "watchdog", "streamlit", "timeago", "pymssql",
-    "keyring"
+    "keyring", "tkinter"
 ]
 known_scicore = [
     "numpy", "scipy", "pandas"
