numpy pipeline appears to be working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -223,6 +223,7 @@
     "pjoin",
     "plancompare",
     "prependpath",
+    "proto",
     "psutil",
     "pval",
     "pyargs",
@@ -251,6 +252,7 @@
     "rtol",
     "rtplan",
     "runslow",
+    "savez",
     "savgol",
     "scipy",
     "semver",
