add machine learning dependencies for the ubuntu tests
Former-commit-id: d26fb75c42cd911707fa5a7195de9b9de3d22d95

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -197,6 +197,13 @@ jobs:
       run: |
         poetry install --no-dev -E tests
 
+## Install Machine Learning Dependencies
+
+    - name: Run a tests installation
+      if: matrix.task == 'tests' && matrix.os == 'ubuntu'
+      run: |
+        poetry install --no-dev -E ml
+
 ## Update all packages and then install with tests environment and
 
     - name: Update all packages then install with tests environment
