remove 22026 from dataset
Former-commit-id: 6c90e4dea9041caaaf5d6b41c3ce04e481b91354

--- a/protyping/auto-segmentation/sb/name_mappings-before-removing-22026.json
+++ b/protyping/auto-segmentation/sb/name_mappings-before-removing-22026.json
@@ -130,6 +130,7 @@
         "Rectum_obj",
         "RetroLn",
         "CTVcombined",
+        "CTVlns",
         "CTVprimary",
         "CombinedLung",
         "Cord-PTV",
@@ -156,6 +157,9 @@
         "LungPTV",
         "MandiblePTV_eval",
         "Mandible_ring",
+        "Nasal PTVeval",
+        "Nasal_ring",
+        "ODnew",
         "OR_ Bone",
         "OR_Metal",
         "OR_Tissue",
