--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -105,9 +105,10 @@ jobs:
 
 # Install poetry
 
-    - name: Install poetry
+    - name: Upgrade pip, upgrade setuptools and install poetry
       run: |
         pip install --upgrade pip
+        pip install setuptools>=42.0.0
         pip install poetry
 
 # No import and run CLI with no dependencies
