--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -107,8 +107,7 @@ jobs:
 
     - name: Upgrade pip, upgrade setuptools and install poetry
       run: |
-        pip install --upgrade pip
-        pip install setuptools>=42.0.0
+        pip install --upgrade pip setuptools
         pip install poetry
 
 # No import and run CLI with no dependencies
