--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
     "Jupyter",
     "Linac",
     "Lutz",
+    "MCSs",
     "MLCX",
     "Mathesaurus",
     "Miniconda",
@@ -56,6 +57,7 @@
     "Riverina",
     "Selectbox",
     "Sobolewski",
+    "Thicknesses",
     "UTHSCSA",
     "Xprt",
     "absl",
@@ -186,6 +188,7 @@
     "mainmenu",
     "markdownlint",
     "markdownviewer",
+    "math",
     "mathjax",
     "matplotlib",
     "maxdepth",
@@ -235,6 +238,7 @@
     "pylibjpeg",
     "pylinac",
     "pylint",
+    "pylint's",
     "pymedphys",
     "pymssql",
     "pynetdicom",
