archive zenodo streaming notebooks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -188,6 +188,7 @@
     "magick",
     "mailto",
     "mainmenu",
+    "mapcheck",
     "markdownlint",
     "markdownviewer",
     "math",
@@ -223,6 +224,7 @@
     "pandoc",
     "parameterisation",
     "pathlib",
+    "paulking",
     "pcolormesh",
     "perim",
     "pformat",
@@ -286,6 +288,7 @@
     "tfrecord",
     "toctree",
     "tolist",
+    "tomo",
     "toplevel",
     "toxenv",
     "tpscompare",
