allow custom hash file to be defined, test download of all data
Former-commit-id: df7c8822ebd874b385cbb774064d4e2c8ccda276

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,7 @@
     "bfgs",
     "biggs",
     "bivariate",
+    "bsize",
     "cefpython",
     "chdir",
     "choco",
@@ -293,6 +294,7 @@
     "toxenv",
     "tpscompare",
     "tqdm",
+    "tsize",
     "tutes",
     "uids",
     "uint",
