--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,8 +70,15 @@ scikit-image = "*"
 # ml
 tensorflow = { version = ">=2.2.0", optional = true}
 tensorflow-estimator = { version = "*", optional = true}
-tensorboard  = { version = "*", optional = true }
+tensorboard = { version = "*", optional = true }
 tensorflow-io = { version = "*", optional = true }
+
+torch = { version = "*", python = "^3.7" }
+torchvision = { version = "*", python = "^3.7" }
+
+jax = { version = "*", optional = true }
+jaxlib = { version = "*", optional = true }
+dm-haiku = { git = "https://github.com/deepmind/dm-haiku", optional = true }
 
 # gui
 streamlit = "*"
@@ -118,7 +125,9 @@ docs = [
 ]
 
 ml = [
-    "tensorflow", "tensorflow-estimator", "tensorboard", "tensorflow-io"
+    "tensorflow", "tensorflow-estimator", "tensorboard", "tensorflow-io",
+    "torch", "torchvision",
+    "jax", "jaxlib", "dm-haiku"
 ]
 
 tests = [
