--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dataclasses = { version = "*", python = "~3.6.0" }
 tqdm = "*"
 attrs = "*"
 watchdog = "*"
+deprecated = "*"
 
 keyring = "*"
 packaging = "*"
