--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,8 @@
     "asdict",
     "astype",
     "atol",
+    "autofunction",
+    "automodule",
     "backlinks",
     "behaviour",
     "bfgs",
@@ -274,6 +276,7 @@
     "setup",
     "setuptools",
     "simonbiggs",
+    "sinogram",
     "skipif",
     "splev",
     "splprep",
@@ -304,6 +307,7 @@
     "ungrouped",
     "unnested",
     "unrecognised",
+    "unshuffle",
     "unsubscriptable",
     "uploader",
     "varian",
