--- a/pyproject.toml
+++ b/pyproject.toml
@@ -133,6 +133,10 @@ pymedphys = "pymedphys.cli.main:pymedphys_cli"
 multi_line_output = 3
 line_length = 88
 include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
 known_third_party = [
     "attr", "tqdm", "pytest", "hypothesis", "cefpython3", "notebook",
     "jupyterlab", "traitlets", "jupyterlab_server", "packaging", "dateutil",
