add in pseudo option
Former-commit-id: 77e9c2970623954960ac1113001087ee7979b802

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,7 +127,7 @@ tests = [
 ]
 
 [tool.poetry.scripts]
-pymedphys = "pymedphys.cli.main:pymedphys_cli"
+pymedphys = "pymedphys.cli:pymedphys_cli"
 
 [tool.isort]
 multi_line_output = 3
