--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -171,12 +171,15 @@
     "ipykernel",
     "ipynb",
     "ipython",
+    "isclass",
     "isclose",
     "isdir",
     "isfile",
+    "isfunction",
     "isinf",
     "isnan",
     "isort",
+    "isroutine",
     "issubset",
     "issuperset",
     "iterrows",
