further refactor vendored packages
Former-commit-id: 3ea98c8749af3de0555b5c607569ca12b8ca2444

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -151,6 +151,7 @@
     "genindex",
     "geos",
     "gmail",
+    "holger",
     "howto",
     "hstack",
     "hypot",
@@ -190,6 +191,7 @@
     "jupyterlab",
     "keras",
     "keyrings",
+    "krekel",
     "libjpeg",
     "logfile",
     "lzma",
@@ -248,6 +250,7 @@
     "psutil",
     "pval",
     "pyargs",
+    "pyclasspath",
     "pydeck",
     "pydicom",
     "pylibjpeg",
