--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -193,6 +193,7 @@
     "keyrings",
     "krekel",
     "libjpeg",
+    "linalg",
     "logfile",
     "lzma",
     "macos",
@@ -226,6 +227,7 @@
     "nbcc",
     "ndarray",
     "ndimage",
+    "niter",
     "nopep",
     "noqa",
     "nrows",
