remove references to labs
Former-commit-id: 92f765a89a24e7457cb8029836ff769734ebb471

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ pylibjpeg-libjpeg = "*"
 cython = "*"
 pymssql = { version = "< 3.0.0", python = "< 3.8" }
 
-# labs
+# used within experimental modules
 python_dateutil = "*"
 scikit-image = "*"
 
