--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ torchvision = { version = "*", python = "^3.7" }
 
 jax = { version = "*", optional = true }
 jaxlib = { version = "*", optional = true }
-flax = { version = "*", optional = true, python = "^3.7" }
+flax = { git = "https://github.com/google/flax", optional = true }
 dm-haiku = { git = "https://github.com/deepmind/dm-haiku", optional = true }
 
 # not in library yet
