--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,25 @@
-language: python
-python:
-  - 3.7
+# Official language image. Look for the different tagged releases at:
+# https://hub.docker.com/r/library/python/tags/
+image: python:3.7
+
+
+# Change pip's cache directory to be inside the project directory since we can
+# only cache local items.
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+
+# Pip's cache doesn't store the python packages
+# https://pip.pypa.io/en/stable/reference/pip_install/#caching
+#
+# If you want to also cache the installed packages, you have to install
+# them in a virtualenv and cache it as well.
 cache:
   paths:
+    - .cache/pip
     - .venv
-  key: "${CI_COMMIT_REF_SLUG}"
-before_install:
+
+before_script:
+  - python -V  # Print out python version for debugging
   - pip install poetry
-install:
   - poetry config settings.virtualenvs.in-project true
   - poetry install
