--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,10 @@ repos:
     -   id: check-added-large-files
         args: ['--maxkb', '300']
 -   repo: https://github.com/timothycrosley/isort
-    rev: 4.3.21
+    rev: 4.3.20
     hooks:
     -   id: isort
-        additional_dependencies: ['isort[pyproject]']
+        additional_dependencies: ['isort[pyproject]==4.3.20']
 -   repo: https://github.com/ambv/black
     rev: 19.3b0
     hooks:
