--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -122,7 +122,7 @@ jobs:
       if: matrix.task == 'tests'
       run: |
         poetry build --format wheel
-        pip install -r requirements-core.txt
+        pip install -r requirements.txt
 
     - name: Install wheel
       if: matrix.task == 'tests' && matrix.os == 'windows'
