--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
+        exclude: ^.*demographic\.000000$
     -   id: requirements-txt-fixer
     -   id: check-yaml
     -   id: check-toml
@@ -20,6 +21,7 @@ repos:
     hooks:
     -   id: isort
         additional_dependencies: ['isort[pyproject]==4.3.20']
+        exclude: ^.*demographic\.000000$
 -   repo: https://github.com/ambv/black
     rev: 19.3b0
     hooks:
