--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
     hooks:
     -   id: isort
         additional_dependencies: ['isort[pyproject]==4.3.20']
-        exclude: ^.*demographic\.000000$
+        files: ^.*\.py$
 -   repo: https://github.com/ambv/black
     rev: 19.3b0
     hooks:
