add all-contributorsrc and convert rst -> md

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,27 +1,14 @@
 {
-  "files": [
-    "README.rst"
-  ],
   "projectName": "pymedphys",
   "projectOwner": "pymedphys",
   "repoType": "github",
   "repoHost": "https://github.com",
-  "skipCi": true,
-  "contributors": [
-    {
-      "login": "SimonBiggs",
-      "name": "Simon Biggs",
-      "avatar_url": "https://avatars1.githubusercontent.com/u/6559099?v=4",
-      "profile": "http://simonbiggs.net",
-      "contributions": [
-        "code",
-        "maintenance",
-        "doc",
-        "review",
-        "test",
-        "tool"
-      ]
-    }
+  "files": [
+    "README.md"
   ],
+  "imageSize": 100,
+  "commit": true,
+  "commitConvention": "angular",
+  "contributors": [],
   "contributorsPerLine": 7
 }
