--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,6 +9,17 @@
   "imageSize": 100,
   "commit": true,
   "commitConvention": "angular",
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "SimonBiggs",
+      "name": "Simon Biggs",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/6559099?v=4",
+      "profile": "http://simonbiggs.net/",
+      "contributions": [
+        "code",
+        "maintenance"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
