--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -64,6 +64,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "ayalalazaro",
+      "name": "ayalalazaro",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/8739720?v=4",
+      "profile": "https://github.com/ayalalazaro",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 4
