docs: add @matthewdeancooper as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -73,6 +73,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "matthewdeancooper",
+      "name": "Matthew Cooper",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/55194730?v=4",
+      "profile": "https://github.com/matthewdeancooper",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 4
