--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -93,6 +93,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "msobolewski",
+      "name": "msobolewski",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/8422812?v=4",
+      "profile": "https://github.com/msobolewski",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 4
