--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -102,6 +102,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "kingrpaul",
+      "name": "Paul King",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/4761748?v=4",
+      "profile": "https://kingrpaul.github.io/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 4
