--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -55,7 +55,8 @@
       "contributions": [
         "code",
         "review",
-        "bug"
+        "bug",
+        "ideas"
       ]
     },
     {
@@ -91,7 +92,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/55194730?v=4",
       "profile": "https://github.com/matthewdeancooper",
       "contributions": [
-        "code"
+        "code",
+        "ideas"
       ]
     },
     {
