docs: add @JacobMcAloney as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -113,6 +113,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "JacobMcAloney",
+      "name": "JacobMcAloney",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/47580406?v=4",
+      "profile": "https://github.com/JacobMcAloney",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 4
