docs: add @lipteck as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -163,6 +163,15 @@
       "contributions": [
         "userTesting"
       ]
+    },
+    {
+      "login": "lipteck",
+      "name": "lipteck",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/53696995?v=4",
+      "profile": "https://github.com/lipteck",
+      "contributions": [
+        "userTesting"
+      ]
     }
   ],
   "contributorsPerLine": 4
