docs: add @darcymason as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -181,6 +181,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "darcymason",
+      "name": "Darcy Mason",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/61110?v=4",
+      "profile": "https://github.com/darcymason",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 4
