--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -190,6 +190,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "mchamberland",
+      "name": "Marc Chamberland",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/1675666?v=4",
+      "profile": "https://github.com/mchamberland",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 4
